# nsd

./: .cirrus.yml  .cvsignore  .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  CHANGES  CREDITS  ChangeLog  DESIGN  DIFFERENCES  Features  LICENSE  Makefile  Makefile.in  NSD-DATABASE  NSD-DIFFFILE  README  README-Travis.md  README.md  RELNOTES  REQUIREMENTS  REQUIREMENTS.testing  ROADMAP  TESTPLAN  TODO  acx_nlnetlabs.m4  answer.c  answer.h  axfr.c  axfr.h  buffer.c  buffer.h  cat-zones-nsd.c  cat-zones-nsd.h  cat-zones.c  cat-zones.h  client.c  client.h  config.h  (+182 more)
.buildkite/: pipeline.yml
.github/workflows/: analysis_ports.yml  build-test.yml  container.yml  coverity-scan.yml  release.yml
compat/: b64_ntop.c  b64_pton.c  cpuset.c  cpuset.h  fake-rfc2553.c  fake-rfc2553.h  inet_aton.c  inet_ntop.c  inet_pton.c  pselect.c  setproctitle.c  snprintf.c  strptime.c  timegm.c
container/: Dockerfile  README.md  nsd.conf
contrib/: README  bug390.patch  build-nsdzones.pl  build-nsdzones.pl.README  example-plugin.c  netbsd-pkgsrc.shar  nsd-parallel-make.README  nsd-parallel-make.patch  nsd-tmpfiles.conf.in  nsd.init  nsd.openrc.conf  nsd.openrc.in  nsd.service  nsd.spec  nsd.zones2nsd.conf  nsd_munin_
contrib/bind2nsd/: ChangeLog  README  TODO  install.sh  setup.py
contrib/container/: Dockerfile  README.md  entrypoint.sh
debian/: changelog  clean  control  copyright  examples  gbp.conf  nsd.conf  nsd.dirs  nsd.docs  nsd.init.d  nsd.install  nsd.links  nsd.lintian-overrides  nsd.postinst  nsd.postrm  nsd.service  nsd.tmpfiles  rules  salsa-ci.yml  watch
debian/patches/: 0001-Enable-control-by-default.patch  0002-Force-dbdir-to-be-var-lib-nsd-by-patching-configure.patch  003-drop-autoconf.patch  series
debian/source/: options
debian/tests/: control  simpletest
debian/upstream/: metadata  signing-key.asc
dnstap/: dnstap.c  dnstap.h  dnstap.m4  dnstap_collector.c  dnstap_collector.h
doc/: CREDITS  ChangeLog  DIFFERENCES  LICENSE  NEW-CFG-OPTION  NSD-4-features  NSD-DATABASE  NSD-DIFFFILE  NSD-DNSSEXY-MODS  NSD-FOR-BIND-USERS  NSD-README  NSD-SEXY  NSD-SEXY-MODS  NSD_FOR_BIND_USERS  RDATA-MINIMIZATION.md  README  RELNOTES  REQUIREMENTS  TESTPLAN  TODO  UPGRADING  differences.tex
doc/manual/: catalog-zones.rst  conf.py  conf.py.in  configuration.rst  index.rst  installation.rst  requirements.txt  xdp.rst  zonefile.rst
docker/: Dockerfile  README.md  entrypoint.sh  nsd.conf
ldns-utils/: .cvsignore  Makefile.in  TODO  configure.ac  ldns-axfr.c  ldns-notify.c  ldns-nsd-glue.c  ldns-nsd-glue.h  ldns-nsdc.c
pzl/: dns_config.h  dnsextlang.c  dnsextlang.h  mmap_parser.h  presentation.c  presentation.h  pzl4nsd.c  pzl4nsd.h  return_status.h  rrtypes.c  zonefile_processor.c  zonefile_processor.h
test/: Makefile
test/all/: Makefile  mkvalid  query  whatishere
test/nsd/: Makefile  README  answers.nsd.test.20714  mkvalid  q.sh  query  questions  stripdig.pl  test.zone  test.zone.db  zone-list
test/zonec/: Kdnssec.+001+25294.key  Kdnssec.+001+25294.private  Makefile  db.atoom.net  db.dekruyff.nl  db.dnssec.nl  db.miek.nl  db.rrtypes.test  db.soa-test1.nl  db.soa-test3.nl  db.soa-test4.nl  db.unknownrrs.test  dnssec.conf  dnssec.zone  dnssec.zone.signed  miek.conf  miek.nl  rfc3597.zone  soa.conf  spf-test.nl  spf.conf  tcr.pl  test.conf
tpkg/: 0000_nsd-compile.tpkg  0001_nsd-debug-comp.tpkg  0100_make_tests_credns.tpkg  0100_make_tests_sexy.tpkg  9999_last.tpkg  README.md  acl_range.tpkg  axfr_fallback.tpkg  axfr_incoming.tpkg  bind8_stats.tpkg  bug009_soa_alone.tpkg  bug013_truncate.tpkg  bug024_zonec_soa.tpkg  bug025_srv.tpkg  bug034_any.tpkg  bug052_ent.tpkg  bug054_rd.tpkg  bug056_axfr.tpkg  bug058_qn_246.tpkg  bug072_parent.tpkg  bug077_dname_length.tpkg  bug086_chars.tpkg  bug087_parse_at.tpkg  bug088_ff_ip4.tpkg  bug090_000_txt.tpkg  bug095_screwy_wc.tpkg  bug096_nsd_xfer.tpkg  bug098_mnemonic_rrsig.tpkg  bug101_spf.tpkg  bug103.tpkg  bug103_nx_soa_ttl.tpkg  bug105_nsdc_lock.tpkg  bug107.tpkg  bug107_bad_hex_3597.tpkg  bug118.tpkg  bug119.tpkg  bug119_port_nonnumeric.tpkg  bug128.tpkg  bug128_backslash_eos.tpkg  bug134.tpkg  (+121 more)
tpkg/0000_nsd-compile.tdir/: 0000_nsd-compile.dsc  0000_nsd-compile.test
tpkg/0001_nsd-debug-comp.tdir/: 0001_nsd-debug-comp.dsc  0001_nsd-debug-comp.test
tpkg/acl_range.tdir/: acl_range.conf  acl_range.dsc  acl_range.post  acl_range.pre  acl_range.test  acl_range.zone
tpkg/allow_query.tdir/: allow_query.conf  allow_query.dsc  allow_query.example.com.zone  allow_query.example.edu.zone  allow_query.example.net.zone  allow_query.example.org.zone  allow_query.post  allow_query.pre  allow_query.test
tpkg/axfr_fallback.tdir/: axfr_fallback.conf  axfr_fallback.datafile  axfr_fallback.dsc  axfr_fallback.help  axfr_fallback.known_good  axfr_fallback.post  axfr_fallback.pre  axfr_fallback.test  axfr_fallback.zone
tpkg/axfr_incoming.tdir/: axfr_incoming.conf  axfr_incoming.datafile  axfr_incoming.dsc  axfr_incoming.new.zone  axfr_incoming.post  axfr_incoming.pre  axfr_incoming.test  axfr_incoming.zone
tpkg/axfr_mid_soa.tdir/: axfr_mid_soa.conf  axfr_mid_soa.dsc  axfr_mid_soa.post  axfr_mid_soa.pre  axfr_mid_soa.test  axfr_mid_soa.testns
tpkg/axfr_oversize_rr.tdir/: axfr_oversize_rr.conf  axfr_oversize_rr.dsc  axfr_oversize_rr.post  axfr_oversize_rr.pre  axfr_oversize_rr.test
tpkg/bad_cpu_affinity.tdir/: bad_cpu_affinity.conf  bad_cpu_affinity.dsc  bad_cpu_affinity.post  bad_cpu_affinity.pre  bad_cpu_affinity.test  bad_server_cpu_affinity.conf  bad_xfrd_cpu_affinity.conf
tpkg/bad_server_ranges.tdir/: bad_server_ranges.conf  bad_server_ranges.dsc  bad_server_ranges.post  bad_server_ranges.test
tpkg/bad_xfr_with_other_tasks.tdir/: bad_xfr_with_other_tasks.control.pem  bad_xfr_with_other_tasks.dsc  (+1 more)
tpkg/credns-setup/: Makefile.in  README  configure  configure.ac  debug.sh  debug.sh.rc  master.server.cf.in  master.zone.cf.in  multitail.sh.in  proxy.server.cf.in  proxy.zone.cf.in  shared.server.cf.in  sideline-notify-only-slave.zone.cf.in  slave.server.cf.in  slave.zone.cf.in  zonefile.in
util/: proxy_protocol.c
(+1839 files in other folders)
